# cpp_playground

./: CMakeLists.txt  README.md
myapp/: CMakeLists.txt
myapp/src/: main.cpp
mylib/: CMakeLists.txt
mylib/include/: mylib.hpp
mylib/src/: mylib.cpp
mylib/test/: mylib_test.cpp
